Version 4.1.1 Compiled with Vaadin 24.7.2 and Java 21. Minor code adjustments. POM file simplified.